Moved all configuration modifications to the configuration module. Also made the config dict of the configuration module private. We can now proceed with optimizing the configuration module.

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -14,6 +14,8 @@ optimization_settings:
         optimizers:
             -   name: 'Powell'
                 patience: 2
+                # check the MOT reference for additional optimizer options per optimizer.
+                optimizer_options: {}
 
         # The additional number of iterations, with either a random perturbation or a smoothing step in between.
         extra_optim_runs: 0
