--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -43,9 +43,13 @@ noise_std_estimating:
 processing_strategies:
     optimization:
         general:
-            name: ProtocolDependent
+            #name: ProtocolDependent
+            #options:
+            #    steps: [[0, 0], [100, 300000], [200, 200000]]
+
+            name: VoxelRange
             options:
-                steps: [[0, 0], [100, 300000], [200, 200000]]
+                nmr_voxels: 5000
 
         # The processing strategies for specific models. This overrides the general processing strategy.
         # This uses regex expressions for matching the model_name. As keys for the items you can either provide
@@ -55,7 +59,7 @@ processing_strategies:
         # Example for Noddi in a cascade:
         #
         # !!python/tuple ['^Noddi \(Cascade[|a-zA-Z0-9_]*\)$', '^Noddi']:
-        #      name: SliceBySlice
+        #      name: VoxelRange
         #
         model_specific:
             '^S0$':
