--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -43,13 +43,9 @@ noise_std_estimating:
 processing_strategies:
     optimization:
         general:
-            #name: ProtocolDependent
-            #options:
-            #    steps: [[0, 0], [100, 300000], [200, 200000]]
-
-            name: VoxelRange
+            name: ProtocolDependent
             options:
-                nmr_voxels: 5000
+                steps: [[0, 0], [100, 300000], [200, 200000]]
 
         # The processing strategies for specific models. This overrides the general processing strategy.
         # This uses regex expressions for matching the model_name. As keys for the items you can either provide
