Changed the default behaviour of the tmp_results_dir to now have the config as default. Next, adds to the config a global option for the tmp_results_dir.

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -6,6 +6,11 @@ output_format:
     sampling:
         gzip: True
 
+# The default temporary results directory for optimization and sampling. Set to !!null to disable and to use the
+# per subject directory.
+tmp_results_dir: !!null
+#tmp_results_dir: /tmp/mdt
+
 optimization_settings:
     # Please see the documentation of MOT.meta_optimizer for more information about the options
     general:
@@ -39,7 +44,7 @@ noise_std_estimating:
             -   AverageOfAir_ExtendedMask
             -   AverageOfAir_DilatedMask
 
-# The strategies to for processing the models
+# The strategies for processing the models
 processing_strategies:
     optimization:
         general:
