The configuration is now updated with more knowledge of what it is doing. Also, the configuration file in the mdt config directory no longer needs to be complete. You can provide the file with only those options you would like to override. A default configuration will always be provided with every new version.

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -7,9 +7,10 @@ output_format:
         gzip: True
 
 # The default temporary results directory for optimization and sampling. Set to !!null to disable and to use the
-# per subject directory.
-tmp_results_dir: !!null
+# per subject directory. For linux a good value can be:
 #tmp_results_dir: /tmp/mdt
+# where /tmp is ideally memory mapped.
+tmp_results_dir: !!null
 
 optimization_settings:
     # Please see the documentation of MOT.meta_optimizer for more information about the options
@@ -25,7 +26,7 @@ optimization_settings:
         # The additional number of iterations, with either a random perturbation or a smoothing step in between.
         extra_optim_runs: 0
 
-    # Optimizations settings for single models. This can overwrite any value from general_optimization_settings.
+    # Optimizations settings for single models. This can overwrite any value from the general optimization settings.
     # This uses regex expressions for matching the model_name. As keys for the items you can either provide
     # a string with a single regex, or you can provide a !!python/tuple [...] with multiple keys that is
     # partially matched if needed.
@@ -110,6 +111,7 @@ logging:
     info_dict:
         version: 1
         disable_existing_loggers: False
+
         formatters:
             simple:
                 format: "[%(asctime)s] [%(levelname)s] [%(name)s] [%(funcName)s] - %(message)s"
