Finished for now the work on the processing strategies. Memory consumption is down, hard drive use is still large (but that is expected).

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -52,6 +52,9 @@ processing_strategies:
             name: ProtocolDependent
             options:
                 steps: [[0, 0], [100, 300000], [200, 200000]]
+            #name: VoxelRange
+            #    options:
+            #    nmr_voxels: 500
 
         # The processing strategies for specific models. This overrides the general processing strategy.
         # This uses regex expressions for matching the model_name. As keys for the items you can either provide
@@ -104,7 +107,11 @@ processing_strategies:
             options:
                 nmr_voxels: 100000
 
-        model_specific: {}
+        model_specific:
+            '^S0(-T2)?$':
+                name: VoxelRange
+                options:
+                    nmr_voxels: 1000000
 
 
 logging:
