--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -12,8 +12,8 @@ output_format:
 # where /tmp is ideally memory mapped.
 tmp_results_dir: !!null
 
-optimization_settings:
-    # Please see the documentation of MOT.meta_optimizer for more information about the options
+# Please see the documentation of MOT meta optimizer for more information about the options
+optimization:
     general:
         # the optimizers to use. List at least one, can be more for use with extra_optim_runs > 0.
         # You can set the patience to null. Then the default patience for the optimizer is used.
@@ -31,9 +31,28 @@ optimization_settings:
     # a string with a single regex, or you can provide a !!python/tuple [...] with multiple keys that is
     # partially matched if needed.
     #
-    # Note 1) the optimization configuration hints in the cascades models takes precedence over these values.
-    # Note 2) if you specify an optimizer in the fit_model function these settings are overwritten.
+    # Please note that if you specify an optimizer in the fit_model call these settings are overwritten.
     model_specific: {}
+
+
+# Please see the documentation of MOT meta sampler for more information about the options
+sampling:
+    general:
+        # the samplers to use. This is a list, in future use we might have the same chain system as with the
+        # optimizers.
+        samplers:
+            -   name: 'MetropolisHastings'
+                nmr_samples: 500
+                burn_length: 500
+                sample_intervals: 5
+                proposal_update_intervals: 50
+
+    # Sampling settings for single models. This can overwrite any value from the general sampling settings.
+    # This uses regex expressions for matching the model_name.
+    #
+    # Please note that if you specify a sampler in the sample_model call these settings are overwritten.
+    model_specific: {}
+
 
 # options for estimating the noise std before model fitting and or sampling
 noise_std_estimating:
@@ -111,7 +130,7 @@ processing_strategies:
             '^S0(-T2)?$':
                 name: VoxelRange
                 options:
-                    nmr_voxels: 1000000
+                    nmr_voxels: 1500000
 
 
 logging:
