Changed comment in config

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -9,7 +9,7 @@ output_format:
 # The default temporary results directory for optimization and sampling. Set to !!null to disable and to use the
 # per subject directory. For linux a good value can be:
 #tmp_results_dir: /tmp/mdt
-# where /tmp is ideally memory mapped.
+# where /tmp can be memory mapped.
 tmp_results_dir: !!null
 
 # Please see the documentation of MOT meta optimizer for more information about the options
