Adds support for reading a GUI specfific config file. Adds support for selecting the CL devices in the config file. Small changes in the GUI code

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -12,6 +12,11 @@ output_format:
 # where /tmp can be memory mapped.
 tmp_results_dir: !!null
 
+runtime_settings:
+    # The single device index or the list with device indices to use during all GPU operations
+    # For list list of possible values please view mdt_list_devices or view the list in the GUI.
+    cl_device_ind: !!null
+
 # Please see the documentation of MOT meta optimizer for more information about the options
 optimization:
     general:
