Simplified the configuration of the sampling and the optimization

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -18,55 +18,33 @@ runtime_settings:
     cl_device_ind: !!null
 
 optimization:
-    general:
-        # the optimizers to use. List at least one, can be more for use with extra_optim_runs > 0.
-        # You can set the patience to null. Then the default patience for the optimizer is used.
-        optimizers:
-            -   name: 'Powell'
-                patience: 2
-                # check the MOT reference for additional optimizer options per optimizer.
-                optimizer_options: {}
+    # The default optimizer
+    optimizer:
+        name: 'Powell'
+        settings:
+            patience: 2
+            # check the MOT reference for additional optimizer options per optimizer.
+            optimizer_options: {}
 
-        # The additional number of iterations, with either a random perturbation or a smoothing step in between.
-        extra_optim_runs: 0
-
-    # Optimizations settings for single models. This can overwrite any value from the general optimization settings.
-    # This uses regex expressions for matching the model_name. As keys for the items you can either provide
-    # a string with a single regex, or you can provide a !!python/tuple [...] with multiple keys that is
-    # partially matched if needed.
-    #
-    # Please note that if you specify an optimizer in the fit_model call these settings are overwritten.
-    model_specific: {}
-
-
-# Please see the documentation of MOT meta sampler for more information about the options
 sampling:
-    general:
-        # the samplers to use. This is a list, in future use we might have the same chain system as with the
-        # optimizers.
-        samplers:
-            -   name: 'MetropolisHastings'
-                nmr_samples: 500
-                burn_length: 500
-                sample_intervals: 5
-                proposal_update_intervals: 50
-
-    # Sampling settings for single models. This can overwrite any value from the general sampling settings.
-    # This uses regex expressions for matching the model_name.
-    #
-    # Please note that if you specify a sampler in the sample_model call these settings are overwritten.
-    model_specific: {}
+    # The default sampler
+    sampler:
+        name: 'MetropolisHastings'
+        settings:
+            nmr_samples: 500
+            burn_length: 500
+            sample_intervals: 5
+            proposal_update_intervals: 50
 
 
 # options for estimating the noise std before model fitting and or sampling
 noise_std_estimating:
-    general:
-        # the optimization routine will use the given estimators in the given order
-        estimators:
-            -   AllUnweightedVolumes
-            -   TwoUnweightedVolumes
-            -   AverageOfAir_ExtendedMask
-            -   AverageOfAir_DilatedMask
+    # the optimization routine will use the given estimators in the given order
+    estimators:
+        -   AllUnweightedVolumes
+        -   TwoUnweightedVolumes
+        -   AverageOfAir_ExtendedMask
+        -   AverageOfAir_DilatedMask
 
 # The strategies for processing the models
 processing_strategies:
