Updates to the docs

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@
 /lib
 /lib64
 .installed.cfg
+/.pybuild
 
 # Installer logs
 pip-log.txt
@@ -40,9 +41,15 @@ output/*/index.html
 
 # Sphinx
 docs/_build
+docs/mdt.*rst
+docs/modules.rst
 
 #Idea
 .idea
 
 #Miscellaneous
 /misc
+
+# debian tmps
+/debian/source
+/debian/tmp
