--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,6 @@
 [wheel]
 universal = 1
 
-[sdist_dsc]
-Depends3: python3-numpy, python3-six, python3-matplotlib, python3-pyopencl, python3-scipy, python3-yaml, python3-mot, python3-nibabel, python3-argcomplete, python3-pyqt5
+[debianize]
+Depends3: python3-mot, python3-numpy, python3-six, python3-matplotlib, python3-pyopencl, python3-scipy, python3-yaml, python3-nibabel, python3-argcomplete, python3-pyqt5
+suite: xenial
