Updates to the documentation

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -13,12 +13,12 @@ output_format:
 tmp_results_dir: !!null
 
 runtime_settings:
-    # The single device index or the list with device indices to use during all GPU operations
-    # For list list of possible values please view mdt_list_devices or view the list in the GUI.
+    # The single device index or a list with device indices to use during OpenCL processing.
+    # For a list of possible values, please run mdt_list_devices or view the device list in the GUI.
     cl_device_ind: !!null
 
 optimization:
-    # The default optimizer
+    # The default optimizer to use for all model fitting.
     optimizer:
         name: 'Powell'
         settings:
@@ -27,7 +27,7 @@ optimization:
             optimizer_options: {}
 
 sampling:
-    # The default sampler
+    # The default sampler to use for model sampling.
     sampler:
         name: 'MetropolisHastings'
         settings:
@@ -52,7 +52,7 @@ processing_strategies:
         general:
             name: ProtocolDependent
             options:
-                steps: [[0, 0], [100, 50000], [200, 50000]]
+                steps: [[0, 0], [100, 60000], [200, 60000]]
 
         # The processing strategies for specific models. This overrides the general processing strategy.
         # This uses regex expressions for matching the model_name. As keys for the items you can either provide
@@ -62,7 +62,7 @@ processing_strategies:
         # Example for Noddi in a cascade:
         #
         # !!python/tuple ['^Noddi \(Cascade[|a-zA-Z0-9_]*\)$', '^Noddi']:
-        #      name: VoxelRange
+        #      ...
         #
         model_specific:
             '^S0$':
@@ -76,22 +76,22 @@ processing_strategies:
             '^Noddi$':
                 name: ProtocolDependent
                 options:
-                    steps: [[0, 0], [100, 50000], [200, 50000]]
+                    steps: [[0, 0], [100, 60000], [200, 60000]]
 
             '^Charmed_r[1-2]$':
                 name: ProtocolDependent
                 options:
-                    steps: [[0, 0], [100, 50000], [200, 10000]]
+                    steps: [[0, 0], [100, 60000], [200, 10000]]
 
             '^Charmed$':
                 name: ProtocolDependent
                 options:
-                    steps: [[0, 0], [100, 50000], [200, 10000]]
+                    steps: [[0, 0], [100, 60000], [200, 10000]]
 
             '^BallStickStickStick$':
                 name: ProtocolDependent
                 options:
-                    steps: [[0, 0], [100, 50000], [200, 30000]]
+                    steps: [[0, 0], [100, 60000], [200, 40000]]
 
     sampling:
         general:
@@ -103,7 +103,7 @@ processing_strategies:
             '^S0(-T2)?$':
                 name: VoxelRange
                 options:
-                    nmr_voxels: 1500000
+                    nmr_voxels: 1000000
 
 
 logging:
