Removed the erroneous q vector from the Protocol auto generated columns. Fixed a small bug in the CHARMED restricted model. Made Tensor compartment slightly faster. Adds configuration options for multiple optimizers.

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -19,16 +19,31 @@ runtime_settings:
 
 optimization:
     # The default optimizer to use for all model fitting.
-    optimizer:
+    general:
         name: 'Powell'
         settings:
             patience: 2
-            # check the MOT reference for additional optimizer options per optimizer.
-            optimizer_options: {}
+
+    model_specific: {}
+        # The model specific optimization routines.
+        # For the multi-step optimizer use something like:
+        #
+        #    '^NODDI$':
+        #        name: 'MultiStepOptimizer'
+        #        settings:
+        #            optimizers:
+        #                -   name: 'GridSearch'
+        #                    settings:
+        #                        patience: 100
+        #                        grid_generator:
+        #                            GaussianRandomGrid: {}
+        #                -   name: 'Powell'
+        #
+        # Note the directive 'optimizers' to signify to the configuration loader to load optimizers recursively.
 
 sampling:
     # The default sampler to use for model sampling.
-    sampler:
+    general:
         name: 'MetropolisHastings'
         settings:
             nmr_samples: 500
@@ -52,19 +67,19 @@ processing_strategies:
         general:
             name: ProtocolDependent
             options:
-                steps: [[0, 0], [100, 60000], [200, 60000]]
+                steps: [[0, 0], [100, 60000], [200, 40000]]
 
-        # The processing strategies for specific models. This overrides the general processing strategy.
-        # This uses regex expressions for matching the model_name. As keys for the items you can either provide
-        # a string with a single regex, or you can provide a !!python/tuple [...] with multiple keys that is
-        # partially matched if needed.
-        #
-        # Example for Noddi in a cascade:
-        #
-        # !!python/tuple ['^Noddi \(Cascade[|a-zA-Z0-9_]*\)$', '^Noddi']:
-        #      ...
-        #
         model_specific:
+            # The processing strategies for specific models. This overrides the general processing strategy.
+            # This uses regex expressions for matching the model_name. As keys for the items you can either provide
+            # a string with a single regex, or you can provide a !!python/tuple [...] with multiple keys that is
+            # partially matched if needed.
+            #
+            # Example for Noddi in a cascade:
+            #
+            # !!python/tuple ['^NODDI \(Cascade[|a-zA-Z0-9_]*\)$', '^NODDI']:
+            #      ...
+
             '^S0$':
                 name: AllVoxelsAtOnce
 
@@ -73,22 +88,22 @@ processing_strategies:
                 options:
                     nmr_voxels: 1000000
 
-            '^Noddi$':
+            '^NODDI$':
                 name: ProtocolDependent
                 options:
-                    steps: [[0, 0], [100, 60000], [200, 60000]]
+                    steps: [[0, 0], [100, 60000], [200, 40000]]
 
-            '^Charmed_r[1-2]$':
-                name: ProtocolDependent
-                options:
-                    steps: [[0, 0], [100, 60000], [200, 10000]]
-
-            '^Charmed$':
+            '^CHARMED_r[1-2]$':
                 name: ProtocolDependent
                 options:
                     steps: [[0, 0], [100, 60000], [200, 10000]]
 
-            '^BallStickStickStick$':
+            '^CHARMED_r3$':
+                name: ProtocolDependent
+                options:
+                    steps: [[0, 0], [100, 40000], [200, 10000]]
+
+            '^BallStick_r3$':
                 name: ProtocolDependent
                 options:
                     steps: [[0, 0], [100, 60000], [200, 40000]]
