Slight update to the VoxelRange in the config file.

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -66,7 +66,7 @@ processing_strategies:
         general:
             name: ProtocolDependent
             options:
-                steps: [[0, 0], [100, 60000], [200, 40000]]
+                steps: [[0, 80000], [100, 60000], [200, 40000]]
 
         model_specific:
             # The processing strategies for specific models. This overrides the general processing strategy.
@@ -85,27 +85,27 @@ processing_strategies:
             '^\w+\-ExVivo$':
                 name: VoxelRange
                 options:
-                    nmr_voxels: 1000000
+                    nmr_voxels: 10000
 
             '^NODDI$':
                 name: ProtocolDependent
                 options:
-                    steps: [[0, 0], [100, 60000], [200, 40000]]
+                    steps: [[0, 80000], [100, 60000], [200, 40000]]
 
             '^CHARMED_r[1-2]$':
                 name: ProtocolDependent
                 options:
-                    steps: [[0, 0], [100, 60000], [200, 10000]]
+                    steps: [[0, 80000], [100, 60000], [200, 10000]]
 
             '^CHARMED_r3$':
                 name: ProtocolDependent
                 options:
-                    steps: [[0, 0], [100, 40000], [200, 10000]]
+                    steps: [[0, 80000], [100, 40000], [200, 10000]]
 
             '^BallStick_r3$':
                 name: ProtocolDependent
                 options:
-                    steps: [[0, 0], [100, 60000], [200, 40000]]
+                    steps: [[0, 80000], [100, 60000], [200, 40000]]
 
     sampling:
         general:
