Adds the symmetric and non parametric Tensor compartment. Small update to the diffusity lower and upper bounds of the Tensor compartment in the CHARMED models. Changed the prior for the angular parameters (theta, phi, psi) to a uniform within bounds prior instead of the sin prior.

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -51,6 +51,12 @@ sampling:
             sample_intervals: 0
 
 
+# The default proposal update function to use for the model parameters when not further specified in the
+# parameters configuration.
+default_proposal_update:
+    name: SingleComponentAdaptiveMetropolis
+    settings: {}
+
 # options for estimating the noise std before model fitting and or sampling
 noise_std_estimating:
     # the optimization routine will use the given estimators in the given order
