Adds component construction method that auto-detects the component builder given the component. Future work may include some reformatting on this auto-detection scheme. Furthermore I added a component source that automatically constructs Cascade models for composite models that do not have one. At the moment this only generates S0 cascades, future work may include automatic init and fix cascades (CI and CF). This could be done by adding some meta-info properties to the compartment models to let the cascade autobuilder detect which compartments to initialize and how.

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -57,6 +57,12 @@ default_proposal_update:
     name: SingleComponentAdaptiveMetropolis
     settings: {}
 
+# The configuration for the automatic generation of cascade models
+auto_generate_cascade_models:
+    enabled: True
+    excluded: [S0]
+
+
 # options for estimating the noise std before model fitting and or sampling
 noise_std_estimating:
     # the optimization routine will use the given estimators in the given order
