Updates to the ExpT1DecTM model. Removed the simulations module for now, it was not very user friendly. Changed the configuration for the default proposal update method to auto-use that of MOT

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -52,10 +52,10 @@ sampling:
 
 
 # The default proposal update function to use for the model parameters when not further specified in the
-# parameters configuration.
-default_proposal_update:
-    name: SingleComponentAdaptiveMetropolis
-    settings: {}
+# parameters configuration. Set to the empty dict to use the MOT default.
+default_proposal_update: {}
+#    name: AcceptanceRateScaling
+#    settings: {}
 
 # The configuration for the automatic generation of cascade models
 auto_generate_cascade_models:
