Following changes in MOT, moved some of the optimization and sampling post-processing to MDT

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -32,12 +32,13 @@ optimization:
         #        name: 'MultiStepOptimizer'
         #        settings:
         #            optimizers:
-        #                -   name: 'GridSearch'
+        #                -   name: RandomRestart
         #                    settings:
-        #                        patience: 100
-        #                        grid_generator:
-        #                            GaussianRandomGrid: {}
-        #                -   name: 'Powell'
+        #                        optimizer:
+        #                             name: Powell
+        #                        starting_point_generator:
+        #                             UsePrevious: {}
+        #                -   name: Powell
         #
         # Note the directive 'optimizers' to signify to the configuration loader to load optimizers recursively.
 
