--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -126,6 +126,12 @@ processing_strategies:
             options:
                 nmr_voxels: 10000
 
+        model_specific:
+            '^CHARMED_r[1-3]$':
+                name: ProtocolDependent
+                options:
+                    steps: [[0, 10000], [200, 10000]]
+
 
 logging:
     info_dict:
