Small update to the default sampling config

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -126,6 +126,12 @@ processing_strategies:
             options:
                 nmr_voxels: 10000
 
+        model_specific:
+            '^CHARMED_r3$':
+                name: VoxelRange
+                options:
+                    nmr_voxels: 2500
+
 
 logging:
     info_dict:
