Refactored the processing strategies such that paralellization may be possible in the future

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -73,64 +73,15 @@ noise_std_estimating:
         -   AverageOfAir_ExtendedMask
         -   AverageOfAir_DilatedMask
 
-# The strategies for processing the models
+# The processing strategy for processing models with optimization or sampling.
+# Here you can specify how many voxels you want to optimize in one batch.
+# Reduce these numbers if you run into memory issues.
 processing_strategies:
     optimization:
-        general:
-            name: ProtocolDependent
-            options:
-                steps: [[0, 80000], [100, 60000], [200, 40000]]
-
-        model_specific:
-            # The processing strategies for specific models. This overrides the general processing strategy.
-            # This uses regex expressions for matching the model_name. As keys for the items you can either provide
-            # a string with a single regex, or you can provide a !!python/tuple [...] with multiple keys that is
-            # partially matched if needed.
-            #
-            # Example for Noddi in a cascade:
-            #
-            # !!python/tuple ['^NODDI \(Cascade[|a-zA-Z0-9_]*\)$', '^NODDI']:
-            #      ...
-
-            '^S0$':
-                name: AllVoxelsAtOnce
-
-            '^\w+\-ExVivo$':
-                name: VoxelRange
-                options:
-                    nmr_voxels: 10000
-
-            '^NODDI$':
-                name: ProtocolDependent
-                options:
-                    steps: [[0, 80000], [100, 60000], [200, 40000]]
-
-            '^CHARMED_r[1-2]$':
-                name: ProtocolDependent
-                options:
-                    steps: [[0, 80000], [100, 60000], [200, 10000]]
-
-            '^CHARMED_r3$':
-                name: ProtocolDependent
-                options:
-                    steps: [[0, 80000], [100, 40000], [200, 10000]]
-
-            '^BallStick_r3$':
-                name: ProtocolDependent
-                options:
-                    steps: [[0, 80000], [100, 60000], [200, 40000]]
+        max_nmr_voxels: 10000
 
     sampling:
-        general:
-            name: VoxelRange
-            options:
-                nmr_voxels: 5000
-
-        model_specific:
-            '^CHARMED_r3$':
-                name: VoxelRange
-                options:
-                    nmr_voxels: 2500
+        max_nmr_voxels: 1000
 
 
 logging:
