--- a/requirements_documentation.txt
+++ b/requirements_documentation.txt
@@ -6,7 +6,6 @@ pyyaml
 nibabel
 argcomplete
 grako
+commonmark>= 0.5.6
 sphinx-argparse
 sphinxcontrib-bibtex
-recommonmark==0.4.0
-commonmark==0.5.4
