Small path updates to the batch profiles

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -64,6 +64,13 @@ auto_generate_cascade_models:
     excluded: [S0]
 
 
+# Default configuration for the post sampling of the models
+#post_sampling:
+#    calculate_waic: True
+#    calculate_multivariate_ess: True
+#    calculate_univariate_ess: True
+
+
 # options for estimating the noise std before model fitting and or sampling
 noise_std_estimating:
     # the optimization routine will use the given estimators in the given order
