Uses the TruncatedGaussian for diffusivities and weights as post sampling statistic

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -64,11 +64,14 @@ auto_generate_cascade_models:
     excluded: [S0]
 
 
-# Default configuration for the post sampling of the models
-#post_sampling:
-#    calculate_waic: True
-#    calculate_multivariate_ess: True
-#    calculate_univariate_ess: True
+# Default configuration for which additional maps to calculate after optimization or after sampling.
+# This provides default settings for the property ``active_post_processing`` of a composite model.
+active_post_processing:
+    optimization: {}  # no switches defined yet
+    sampling:
+        waic: False
+        multivariate_ess: True
+        univariate_ess: False
 
 
 # options for estimating the noise std before model fitting and or sampling
@@ -120,12 +123,12 @@ logging:
         loggers:
             mot:
                 level: DEBUG
-                handlers: [console, model_output_file]
+                handlers: [console, model_output_file, dispatch_handler]
 
             mdt:
                 level: DEBUG
-                handlers: [console, model_output_file]
+                handlers: [console, model_output_file, dispatch_handler]
 
         root:
             level: INFO
-            handlers: [dispatch_handler]
+            handlers: []
