Adds Hessian and covariance computation as post-processing to the models. Changed the signature of post_optimization_modifiers and changed its purpose to only update the results, for adding extra optimization maps it is possible to use the extra_optimization_maps directive.

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -64,14 +64,15 @@ auto_generate_cascade_models:
     excluded: [S0]
 
 
-# Default configuration for which additional maps to calculate after optimization or after sampling.
-# This provides default settings for the property ``active_post_processing`` of a composite model.
-active_post_processing:
+# Default configuration for the automatic post-processing of optimization and sampling.
+# This provides default settings for the property ``post_processing`` of a composite model.
+post_processing:
     optimization: {}  # no switches defined yet
     sampling:
         waic: False
-        multivariate_ess: True
+        multivariate_ess: False
         univariate_ess: False
+        sample_statistics: False
 
 
 # options for estimating the noise std before model fitting and or sampling
