Adds control switches for the post-processing to the model fitting and sampling routines. Renamed the configuration switch back to active_post_processing.

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -64,10 +64,11 @@ auto_generate_cascade_models:
     excluded: [S0]
 
 
-# Default configuration for the automatic post-processing of optimization and sampling.
-# This provides default settings for the property ``post_processing`` of a composite model.
-post_processing:
-    optimization: {}  # no switches defined yet
+# Default configuration for the active post-processing of optimization and sampling.
+# This provides default settings for active post-processing of a composite model.
+active_post_processing:
+    optimization:
+        covariance: True
     sampling:
         waic: False
         multivariate_ess: False
