Updates to the batch profile and batch processing routines. Small update to the model post-processing, adds post-processing after sampling and adds more switches to the configuration.

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -72,6 +72,11 @@ active_post_processing:
     sampling:
         univariate_ess: False
         multivariate_ess: False
+        chain_end_point: False
+        proposal_state: False
+        mh_state: False
+        maximum_likelihood: False
+        maximum_a_posteriori: False
 
 
 # options for estimating the noise std before model fitting and or sampling
