Adds another post-processing switch to the sampling post-processing

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -77,6 +77,7 @@ active_post_processing:
         mh_state: False
         maximum_likelihood: False
         maximum_a_posteriori: False
+        model_defined_maps: True
 
 
 # options for estimating the noise std before model fitting and or sampling
