--- a/.gitchangelog.rc
+++ b/.gitchangelog.rc
@@ -251,11 +251,11 @@ include_merge = True
 ##        take care of everything and might be more complex. Check the README
 ##        for a complete copy-pastable example.
 ##
-# publish = FileInsertIntoFirstRegexMatch(
-#     "CHANGELOG.rst",
-#     r'/(?P<rev>[0-9]+\.[0-9]+(\.[0-9]+)?)\s+\([0-9]+-[0-9]{2}-[0-9]{2}\)\n--+\n/',
-#     idx=lambda m: m.start(1)
-# )
+publish = FileInsertAtFirstRegexMatch(
+     "CHANGELOG.rst",
+     r'\*+\nChangelog\n\*+\n(\n)',
+     idx=lambda m: m.start(1)
+)
 #publish = stdout
 
 
@@ -289,12 +289,12 @@ include_merge = True
 ## changelog.
 ##
 ## The default is to use all commits to make the changelog.
-revs = ["^v0.9.37", 'HEAD']
-#revs = [
-#    Caret(
-#        FileFirstRegexMatch(
-#            "CHANGELOG.rst",
-#            r"(?P<rev>[0-9]+\.[0-9]+(\.[0-9]+)?)\s+\([0-9]+-[0-9]{2}-[0-9]{2}\)\n==+\n")),
-#    "HEAD"
-#]
+#revs = ["^v0.2.38", 'HEAD']
+revs = [
+    Caret(
+        FileFirstRegexMatch(
+            "CHANGELOG.rst",
+            r"(?P<rev>v[0-9]+\.[0-9]+(\.[0-9]+)?)\s+\([0-9]+-[0-9]{2}-[0-9]{2}\)\n==+\n")),
+    "HEAD"
+]
 #revs = []
