Slight updates to the way the MCMC sampler is called

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -43,12 +43,11 @@ optimization:
         # Note the directive 'optimizers' to signify to the configuration loader to load optimizers recursively.
 
 sampling:
-    # The default sampler to use for model sampling.
+    # The default sampling settings
     general:
-        name: 'MetropolisHastings'
         settings:
-            nmr_samples: 5000
-            burn_length: 0
+            nmr_samples: 10000
+            burnin: 0
             sample_intervals: 0
 
 
