Adds S0-T2 cascade model. Adds powell patience 5 for the S0-T2 model to the config

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -24,7 +24,7 @@ optimization:
         settings:
             patience: 2
 
-    model_specific: {}
+    model_specific:
         # The model specific optimization routines.
         # For the multi-step optimizer use something like:
         #
@@ -41,6 +41,12 @@ optimization:
         #                -   name: Powell
         #
         # Note the directive 'optimizers' to signify to the configuration loader to load optimizers recursively.
+
+        # The S0-T2 model typically needs more iterations than other models.
+        '^S0-T2$':
+            name: Powell
+            settings:
+                patience: 5
 
 sampling:
     # The default sampling settings
