Following changes in the MOT samplers.

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -54,14 +54,8 @@ sampling:
         settings:
             nmr_samples: 10000
             burnin: 0
-            sample_intervals: 0
+            thinning: 0
 
-
-# The default proposal update function to use for the model parameters when not further specified in the
-# parameters configuration. Set to the empty dict to use the MOT default.
-default_proposal_update: {}
-#    name: AcceptanceRateScaling
-#    settings: {}
 
 # The configuration for the automatic generation of cascade models
 auto_generate_cascade_models:
@@ -77,9 +71,6 @@ active_post_processing:
     sampling:
         univariate_ess: False
         multivariate_ess: False
-        chain_end_point: False
-        proposal_state: False
-        mh_state: False
         maximum_likelihood: False
         maximum_a_posteriori: False
         model_defined_maps: True
