Renamed the post-processing switch covariance to covariancess and added the switch variances. Both must be set to False to disable computation of the FIM. If only one of them is False, the FIM will be computed and only the elements desired will be returned.

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -67,7 +67,8 @@ auto_generate_cascade_models:
 # This provides default settings for active post-processing of a composite model.
 active_post_processing:
     optimization:
-        covariance: True
+        variances: True
+        covariances: True
     sampling:
         univariate_ess: False
         multivariate_ess: False
