Added the covariance terms to the error propagation of Tensor FA. Again modified the optimization extra return flags.

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -67,8 +67,12 @@ auto_generate_cascade_models:
 # This provides default settings for active post-processing of a composite model.
 active_post_processing:
     optimization:
-        variances: True
-        covariances: True
+        # If set, we compute the uncertainties
+        uncertainties: True
+
+        # Only works if uncertainties is set to True, defines if we store the covariance matrix
+        store_covariances: True
+
     sampling:
         univariate_ess: False
         multivariate_ess: False
