--- a/setup.cfg
+++ b/setup.cfg
@@ -2,4 +2,4 @@
 universal = 1
 
 [debianize]
-Depends3: python3-mot, python3-six, python3-matplotlib, python3-scipy, python3-yaml, python3-nibabel, python3-argcomplete, python3-pyqt5
+Depends3: python3-mot, python3-matplotlib, python3-scipy, python3-yaml, python3-nibabel, python3-argcomplete, python3-pyqt5
