--- a/requirements_documentation.txt
+++ b/requirements_documentation.txt
@@ -4,7 +4,7 @@ scipy>=0.12.1
 pyyaml
 nibabel
 argcomplete
-grako
+tatsu
 commonmark>= 0.5.6
 #sphinx-argparse # enable again when supported on read the docs
 sphinxcontrib-bibtex
