Following changes in MOT.

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -20,15 +20,15 @@ runtime_settings:
 optimization:
     # The default optimizer to use for all model fitting.
     general:
-        name: 'Powell'
-        settings:
+        name: Powell
+        options:
             patience: 2
 
     model_specific:
         # The S0-T2 model typically needs more iterations than other models.
         '^S0-T2$':
             name: Powell
-            settings:
+            options:
                 patience: 5
 
 sampling:
