Moved some classes around, some refactorings.

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -85,18 +85,18 @@ logging:
 
         handlers:
             console:
-                class: mdt.log_handlers.StdOutHandler
+                class: mdt.lib.log_handlers.StdOutHandler
                 level: INFO
                 formatter: simple
 
             model_output_file:
-                class: mdt.log_handlers.ModelOutputLogHandler
+                class: mdt.lib.log_handlers.ModelOutputLogHandler
                 level: DEBUG
                 formatter: simple
                 encoding: utf8
 
             dispatch_handler:
-                class: mdt.log_handlers.LogDispatchHandler
+                class: mdt.lib.log_handlers.LogDispatchHandler
                 level: INFO
                 formatter: simple
 
