Adds univariate normal fit to the sampling post-processing.

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -62,6 +62,7 @@ active_post_processing:
         maximum_likelihood: False
         maximum_a_posteriori: False
         model_defined_maps: True
+        univariate_normal: True
 
 
 # Here you can specify how many voxels you want to optimize in one batch.
