Adds average auto correlation to the sampling post processing.

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -61,6 +61,7 @@ active_post_processing:
         multivariate_ess: False
         maximum_likelihood: False
         maximum_a_posteriori: False
+        average_acceptance_rate: False
         model_defined_maps: True
         univariate_normal: True
 
