Removed the Cascade models.

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -24,12 +24,12 @@ optimization:
         options:
             patience: 2
 
-    model_specific:
-        # The S0-T2 model typically needs more iterations than other models.
-        '^S0-T2$':
-            name: Powell
-            options:
-                patience: 5
+    # Model specific configurations. Keys are regexes, values are optimizer name and options. Example:
+    #model_specific:
+        #'^NODDI$':
+        #    name: Powell
+        #    options:
+        #        patience: 5
 
 sampling:
     # The default sampling settings
@@ -38,12 +38,6 @@ sampling:
             nmr_samples: 10000
             burnin: 0
             thinning: 0
-
-
-# The configuration for the automatic generation of cascade models
-auto_generate_cascade_models:
-    enabled: True
-    excluded: [S0]
 
 
 # Default configuration for the active post-processing of optimization and sampling.
