Adds a post-processing flag for the log likelihood and the information criterion maps.

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -46,9 +46,10 @@ active_post_processing:
     optimization:
         # If set, we compute the uncertainties
         uncertainties: True
-
         # Only works if uncertainties is set to True, defines if we store the covariance matrix
         store_covariances: True
+        # Compute the log-likelihood and information criterion maps
+        ll_and_ic: True
 
     sampling:
         univariate_ess: False
