Adds some introduction text to the mdt.conf file.

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -1,3 +1,9 @@
+# The MDT configuration file.
+#
+# The file `mdt.default.conf` contains all the default configuration settings and is not read by MDT.
+# To make changes to the config, you have to copy/rename the file to `mdt.conf` and amend that file.
+
+
 # Specifics for the output format of optimization and sampling
 # the options gzip determine if the volumes are written as .nii or as .nii.gz
 output_format:
