--- a/containers/Dockerfile.intel
+++ b/containers/Dockerfile.intel
@@ -18,4 +18,4 @@ RUN cd /src && \
 ENV DEBIAN_FRONTEND noninteractive
 RUN apt-get update && apt-get install -y software-properties-common && add-apt-repository ppa:robbert-harms/cbclab
 RUN apt-get update && apt-get install -y python3-mdt python3-pip
-RUN pip3 install tatsu
+RUN pip3 install tatsu==4.2.6
