Updated default configuration to disable the uncertainties (FIM) computation. This was a frequent encountered error while being an hardly used feature.

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -51,7 +51,7 @@ sampling:
 active_post_processing:
     optimization:
         # If set, we compute the uncertainties
-        uncertainties: True
+        uncertainties: False
         # Only works if uncertainties is set to True, defines if we store the covariance matrix
         store_covariances: True
         # Compute the log-likelihood and information criterion maps
